# RITM

./: .gitignore  REFACTORING_WEEKLY_PATTERNS.md
backend/: pyproject.toml
backend/src/: manage.py
backend/src/app/api/: main.py
backend/src/app/api/v1/: api.py
backend/src/app/api/v1/endpoints/: insights.py  insights.sql  item.py  operators.py
backend/src/app/sql/: activity-gaps.sql  anomalies.sql  geo-distributions.sql  inactivity-periods.sql  ip-asn-changes.sql  monthly-stats.sql  operator-dashboard.sql  top-operators.sql  weekly-patterns.sql
backend/src/app/utils/: db_utils.py  settings.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/api/insights/: route.ts
frontend/src/app/api/operators/: route.ts
frontend/src/app/operateur/[id]/: page.tsx
frontend/src/components/: Toast.tsx  Toaster.tsx
frontend/src/components/charts/: WeeklyPatternsChart.tsx
frontend/src/components/ui/: AreaChart.tsx  BarChart.tsx  BarList.tsx  Card.tsx  CategoryBar.tsx  ComboChart.tsx  DonutChart.tsx  ExportButton.tsx  LineChart.tsx  Metric.tsx  OperatorId.tsx  Text.tsx  Title.tsx  Tracker.tsx
frontend/src/hooks/: useDashboardData.ts  useToast.ts  useWeeklyPatterns.ts
frontend/src/lib/: exportUtils.ts  utils.ts
