[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "ayouba",email = "ayoubadoumbia041@gmail.com"}
]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]
requires-python = ">=3.10"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^2.2.6"
fastapi =  ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.2,<0.35.0"
duckdb = "^1.3.0"
pandas = "^2.2.3"

[tool.poetry.scripts]
start = "src.manage:start"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
